--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/xuansining/React-UI/issues"
   },
-  "homepage": "https://github.com/xuansining/React-UI#readme"
+  "homepage": "https://github.com/xuansining/React-UI#readme",
+  "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "typescript": "^4.4.4",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.2.3"
+  }
 }
