--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,10 +20,19 @@
   },
   "homepage": "https://github.com/xuansining/React-UI#readme",
   "devDependencies": {
+
+
     "awesome-typescript-loader": "^5.2.1",
-    "typescript": "^4.4.4",
+    "html-webpack-plugin": "^3.2.0",
+    "typescript": "^3.3.3333",
     "webpack": "4.29.6",
     "webpack-cli": "3.2.3",
-    "webpack-dev-server": "~3"
+    "webpack-dev-server": "~3",
+    "@types/react": "^16.8.7",
+    "@types/react-dom": "^16.8.2"
+  },
+  "dependencies": {
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4"
   }
 }
