--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/lib/index",
   "types": "dist/lib/index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production  webpack --config webpack.config.prod.js"
   },
@@ -31,7 +31,14 @@
     "webpack-dev-server": "~3",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.0",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "@types/jest": "^24.0.9",
+    "@types/react-test-renderer": "^16.8.1",
+    "jest": "^24.3.1",
+    "react-test-renderer": "^16.8.4",
+    "ts-jest": "^24.0.0"
   },
   "dependencies": {
     "react": "^16.8.4",
