--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "@types/react-test-renderer": "^16.8.1",
     "jest": "^24.3.1",
     "react-test-renderer": "^16.8.4",
-    "ts-jest": "^24.0.0"
+    "ts-jest": "^24.0.0",
+    "svg-sprite-loader": "^4.1.3"
   },
   "dependencies": {
     "react": "^16.8.4",
