--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React-UI",
+  "name": "react-ui",
   "version": "1.0.0",
   "description": "",
   "main": "dist/lib/index",
@@ -39,7 +39,11 @@
     "jest": "^24.3.1",
     "react-test-renderer": "^16.8.4",
     "ts-jest": "^24.0.0",
-    "svg-sprite-loader": "^4.1.3"
+    "svg-sprite-loader": "^4.1.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "node-sass": "npm:sass",
+    "css-loader": "^2.1.1"
   },
   "dependencies": {
     "react": "^16.8.4",
