--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "node-sass": "npm:sass",
-    "css-loader": "^2.1.1"
+    "css-loader": "^2.1.1",
+    "tslib": "^2.0.0"
   },
   "dependencies": {
     "react": "^16.8.4",
