--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "dist/lib/index",
   "types": "dist/lib/index",
+  "files": [
+    "/dist/**/*"
+  ],
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
-    "build": "cross-env NODE_ENV=production  webpack --config webpack.config.prod.js"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
+    "ci": "cross-env NODE_ENV=test JEST_JUNIT_OUTPUT=./test-results/jest/results.xml jest --config=jest.config.ci.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/xuansining/React-UI.git"
+    "url": "https://github.com/xuansining/React-UI"
   },
   "keywords": [],
   "author": "",
@@ -19,35 +23,39 @@
   "bugs": {
     "url": "https://github.com/xuansining/React-UI/issues"
   },
-  "homepage": "https://github.com/xuansining/React-UI#readme",
+
   "devDependencies": {
-
-
-    "awesome-typescript-loader": "^5.2.1",
-    "html-webpack-plugin": "^3.2.0",
-    "typescript": "^3.3.3333",
-    "webpack": "4.29.6",
-    "webpack-cli": "3.2.3",
-    "webpack-dev-server": "~3",
-    "@types/react": "^16.8.7",
-    "@types/react-dom": "^16.8.2",
-    "cross-env": "^5.2.0",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@types/jest": "^24.0.9",
+    "@types/react": "^16.8.7",
+    "@types/react-dom": "^16.8.2",
+    "@types/react-router-dom": "^4.3.1",
     "@types/react-test-renderer": "^16.8.1",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-jest": "^24.3.1",
+    "babel-preset-react-app": "^7.0.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.3.1",
+    "jest-junit": "^6.3.0",
+    "node-sass": "npm:sass",
     "react-test-renderer": "^16.8.4",
-    "ts-jest": "^24.0.0",
-    "svg-sprite-loader": "^4.1.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "node-sass": "npm:sass",
-    "css-loader": "^2.1.1",
-    "tslib": "^2.0.0"
+    "svg-sprite-loader": "^4.1.3",
+    "ts-jest": "^24.0.0",
+    "typescript": "^3.3.3333",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "react-router-dom": "^5.0.0"
   }
 }
