--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,5 @@
 {
   "compilerOptions": {
-//    "paths": {
-//      "tslib": ["node_modules/tslib"]
-//    },
     "outDir": "dist",
     "declaration": true,
     "baseUrl": ".",
@@ -21,7 +18,8 @@
     "strictNullChecks": true,
     // "suppressImplicitAnyIndexErrors": true,
     // https://github.com/Microsoft/TypeScript/issues/28762#issuecomment-443406607
-    "allowSyntheticDefaultImports": true,
+    // "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "noUnusedLocals": true
   },
   "include": [
