--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "noUnusedLocals": true
   },
   "include": [
-    "lib/**/*"
+    "lib/**/*",
+    "lib/types/custom.d.ts"
   ],
   "exclude": [
     "node_modules",
